@@ -5466,14 +5466,14 @@ See also: @link, @open.
 & MISC FUNCTIONS
   Topic: Miscellaneous Functions
  
-	case()		config()	convsecs()	convtime()	
-	die()		hasmodule()	helptext()	ifelse()
-	localize()	mudname()	nonzero()	oemit()
-	pemit()		r()		rand()		remit()		
-	restarts()	restarttime()	s()		secs()		
-	setq()		setr()		speak()		sql()		
-	starttime()	subeval()	switch()	switchall()	
-	time()		timefmt()	version()
+	case()		config()	connrecord()	convsecs()
+	convtime()	die()		hasmodule()	helptext()	
+	ifelse()	localize()	mudname()	nonzero()	
+	oemit()		pemit()		r()		rand()		
+	remit()		restarts()	restarttime()	s()		
+	secs()		setq()		setr()		speak()		
+	sql()		starttime()	subeval()	switch()	
+	switchall()	time()		timefmt()	version()
  
 & STRING FUNCTIONS
   Topic: String Functions
@@ -9395,6 +9395,12 @@ performed and the walk down the list stops.
   Not all configuration options can be obtained this way; some are protected
   for security reasons, while others don't have a single simple value
   (access directives, for instance).
+ 
+& CONNRECORD()
+  Function:  connrecord()
+ 
+  This function returns the record for the number of connected players
+  (the '<number> record' that the WHO command displays).
  
 & SHUFFLE()
   Function:  shuffle(<word1> <word2> <...<wordN>[,<delim>][,<output delim>])
@@ -14325,6 +14331,8 @@ Continued in 'help 3.1 functions3'.
 - chomp() can now handle a lone CR or LF.
  
 - choose() picks an element from a list on a weighted-random-choice basis.
+ 
+- Added connrecord(), connected player record (as in WHO).
  
 - Added entrances() function, similar to @entrances command. Based on an
   idea from PennMUSH.
